--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "ace-builds": "^1.35.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-ace": "^12.0.0",
     "react-ace-editor": "^0.0.3",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
